--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -103,6 +103,10 @@
     background-color: rgba(0,0,0, 1);
     padding-left: 0;
     justify-content: center;
+
+    @media (max-width: $bp-smallest) {
+      height: 35rem;
+     }
   }
 
   &__brand {
